# safesocial

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_release.sh  index.html
.wrangler/cache/: pages.json
docs/: analysis_review.md  architecture.md  architecture_weaknesses.md  ios_install.md  privacy_protocol.md  protocol.md  threat_model.md
landing/: index.html
relay/: README.md  package-lock.json  package.json  worker.js  wrangler.toml
safesocial_app/: README.md  generate_icon_final.py  generate_spheres_logos.py  pubspec.yaml
safesocial_app/android/app/: build.gradle.kts
safesocial_app/ios/Runner/: Info.plist
safesocial_app/ios/Runner.xcodeproj/: project.pbxproj
safesocial_app/lib/: app.dart  main.dart
safesocial_app/lib/models/: album.dart  contact.dart  content_privacy.dart  friend_request.dart  group.dart  message.dart  post.dart  ring.dart  user_profile.dart
safesocial_app/lib/services/: album_service.dart  backup_service.dart  call_service.dart  chat_service.dart  contact_service.dart  crypto_service.dart  debug_log_service.dart  feed_service.dart  group_service.dart  identity_service.dart  media_service.dart  relay_service.dart  ring_service.dart  rust_core_service.dart  sync_service.dart  theme_service.dart  (+1 more)
safesocial_app/linux/: CMakeLists.txt
safesocial_app/test/: widget_test.dart
safesocial_app/windows/: CMakeLists.txt
safesocial_core/: Cargo.toml
safesocial_core/src/: contacts.rs  feed.rs  ffi.rs  groups.rs  identity.rs  lib.rs  media.rs  messaging.rs  node.rs  privacy.rs  profile.rs  ratchet.rs  recovery.rs  schema.rs
(+53 files in other folders)
