[package]
name = "safesocial_core"
version = "0.3.0"
edition = "2021"
description = "Spheres P2P social network core — Veilid integration"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
veilid-core = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
double-ratchet = "0.1.0"
gf256 = { version = "0.3", features = ["shamir", "thread-rng"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
ffi = []
